fix(page): align center

--- a/blocks/page.css
+++ b/blocks/page.css
@@ -4,3 +4,9 @@
   min-width: 320px;
   font-family: 'Inter', Arial, sans-serif;
 }
+
+@media screen and (min-width: 1280px) {
+  .page {
+    margin: 0 auto;
+  }
+}
